adding custom test

--- a/server-side/src/main/resources/application.yml
+++ b/server-side/src/main/resources/application.yml
@@ -33,3 +33,6 @@ application:
   jwtSecret: my-jwt-secret
   authHeader: Authorization
   expirationTime: 600000
+  claimForJwt:
+    - EXTERNAL_ID
+    - EMAIL
